# stackoperator

./: README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
src/stackoperator/: __init__.py  batchOperator.py  cfnReader.py  readerFactory.py  resourcegroupReader.py  tfReader.py
